--- a/css/seerem.css
+++ b/css/seerem.css
@@ -1,1 +1,18 @@
-.sub-header{background:url(../img/seeremheader.png);background-position:center;background-repeat:no-repeat;background-size:cover;background-attachment:fixed}.overview-button{margin-top:3rem}.page-description.right img{width:100%}
+/* Header Styling */
+.sub-header {
+  background: url(../img/seeremheader.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+/* Project Link */
+.overview-button {
+  margin-top: 3rem;
+}
+
+/* Image Styling */
+.page-description.right img {
+  width: 100%;
+}
