--- a/css/index.scss
+++ b/css/index.scss
@@ -11,16 +11,111 @@ $background-colour: #ffffff;
   
 /* Header Styling */
 .main-header{
-  padding: 4rem 10% 4rem;
+  padding: 12rem 10% 12rem;
   margin-bottom: -2rem;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+
+  background-color: $accent-colour3;
+  // background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1004%26quot%3b)' fill='none'%3e%3cpath d='M1462.07 262.71C1310.73 255 1137.34-7.09 921.57-11.69 705.8-16.29 719.11-33.75 651.32-33.77' stroke='rgba(251%2c 250%2c 250%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M1697.54 131.37C1583.11 138.82 1501.6 356.22 1297.27 355.37 1092.94 354.52 1033.19-3.2 897-33.34' stroke='rgba(251%2c 250%2c 250%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M1606.08 472.07C1492.02 471.86 1380.65 402.07 1155.23 402.07 929.8 402.07 959.82 487.07 704.37 472.07 448.93 457.07 422.64-24.74 253.52-82.22' stroke='rgba(251%2c 250%2c 250%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M1595.58 418.67C1491 417.47 1424.18 316.42 1194.11 301.07 964.04 285.72 921.83-13.99 792.64-35.2' stroke='rgba(251%2c 250%2c 250%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M1628.57 60.33C1447.41 64.93 1292.54 323.7 953.18 323.53 613.82 323.36 473.2-59.73 277.79-74.13' stroke='rgba(251%2c 250%2c 250%2c 1)' stroke-width='2'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1004'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
+
+}
+
+.curve-container{
+  position: absolute;
+  z-index: 0;
+  right: 0;
+}
+
+.curves {
+  // width: 90vw; 
+  width: 70vw; 
+  height: auto;
+}
+
+.curve-container > svg > g > path{
+  animation: animateCurves 90s cubic-bezier(.55,.5,.45,.5)     infinite;
+  animation-direction: alternate;
+}
+
+.curve-container > svg > g > path:nth-child(1){
+  animation-delay: -2s;
+  animation-duration: 25s;
+}
+
+.curve-container > svg > g > path:nth-child(2){
+  animation-delay: -10s;
+  animation-duration: 45s;
+}
+
+.curve-container > svg > g > path:nth-child(3){
+  animation-delay: -30s;
+  animation-duration: 65s;
+}
+
+@keyframes animateCurves {
+  0% {
+   transform: translate3d(-90px,0,0);
+  }
+  100% { 
+    transform: translate3d(85px,0,0);
+  }
+}
+
+.wave-container{
+  // background: linear-gradient($accent-colour3 40%, $background-colour 60%);
+  background: linear-gradient($accent-colour3, $background-colour 65%);
+}
+
+.wave-container > svg {
+  z-index: 1;
+  display: block;
+  transform-origin: bottom;
+  animation: animateWave 1000ms cubic-bezier(0.23, 1, 0.32, 1) forwards; 
+}
+
+.wave-container > svg > path:nth-child(2){
+  animation: animateWaveVertical 20s cubic-bezier(.55,.5,.45,.5)     infinite;
+  animation-direction: alternate;
+}
+
+.wave-container > svg > path:nth-child(3){
+  animation: animateWaveVertical 10s cubic-bezier(.55,.5,.45,.5)     infinite;
+  animation-direction: alternate;
+  animation-delay: -4s;
+}
+
+.wave-container > svg > path:nth-child(4){
+  animation: animateWaveVertical 15s cubic-bezier(.55,.5,.45,.5)     infinite;
+  animation-direction: alternate;
+  animation-delay: -4s;
+}
+
+// @keyframes animateWave {
+//   0% {
+//     transform: scale(1,0);
+//   }
+//   100% {
+//     transform: scale(1,1);
+//   }
+// }
+
+@keyframes animateWaveVertical {
+  0% {
+   transform: translate3d(0px,20px,0);
+  }
+  100% { 
+    transform: translate3d(0,0,0);
+  }
 }
   
 /* Header Text Container */
 .header-content{
   flex: 3;
+
+  
+  z-index: 1;
 }
   
 /* Header Text Styling */
@@ -32,6 +127,7 @@ $background-colour: #ffffff;
 .main-header h2{
   color: $accent-colour1;
   width: 60%;
+  font-weight: 600;
   font-size: 1.5rem;
   margin-top: -10rem;
   margin-left: 0.3rem;
@@ -47,6 +143,9 @@ $background-colour: #ffffff;
 /* Header Links Container */
 .side-nav{
   flex: 1;
+
+  
+  z-index: 1;
 }
 
 /* Header Link Styling */
@@ -203,12 +302,11 @@ hr{
   color: $background-colour;
 }
 
-
 /* MEDIA QUERIES */
 /* Screen size below 480px */
 @media screen and (max-width:30rem){
   .main-header{
-    padding: 8rem 0 0 9%;
+    padding: 9rem 0 3rem 9%;
     margin-bottom: -1.5rem;
   }
 
@@ -310,7 +408,7 @@ hr{
 /* Screen size of 480px - 768px */
 @media screen and (min-width:30rem) and (max-width: 48rem){
   .main-header{
-    padding: 9rem 0 0 9%;
+    padding: 11rem 0 5rem 9%;
     margin-bottom: -1rem;
   }
 
@@ -412,7 +510,7 @@ hr{
 /* Screen size of 768px - 960px */
 @media screen and (min-width: 48rem) and (max-width: 60rem){
   .main-header{
-    padding: 4rem 9% 0;
+    padding: 8rem 9% 8rem;
   }
 
   .main-header h1{
