--- a/css/main.scss
+++ b/css/main.scss
@@ -210,82 +210,6 @@ header h2{
 	padding-right: 8%;
 }
 
-/* Form Styling */
-.contact-form{
-	background: $background-colour;
-	margin-top: -1.5rem;
-	padding-left: 2rem;
-	padding-bottom: 1.2rem;
-}
-
-.form-container{
-	flex: 1;
-	padding: 2rem;
-	margin-left: 1rem;
-	margin-right: 1rem;
-	margin-bottom: 3rem;
-	background: $background-colour;
-}
-
-.form-container h2{
-	margin-left: 0.8rem;
-}
-
-.form-section.name{
-	padding-top: 2rem;
-	margin-bottom: -3rem;
-	margin-left: -1rem;
-	margin-right: 5rem;
-	display: inline-block;
-}
-
-.form-section.block{
-	padding-top: 3rem;
-	margin-bottom: -2rem;
-	margin-left: -1rem;
-	margin-right: 6.8rem;
-	display: block;
-}
-
-.form-label{
-	color: #3C3C3C;
-}
-
-/* Styling Text Input Box */
-.text-input{
-	padding: 0.5rem;
-	margin-top: 0.5rem;
-	margin-bottom: 0.7rem;
-	border: 1px solid #bbbbbb;
-	font-family: 'Open Sans', sans-serif;
-	transition: 0.5s;
-}
-
-.text-input:hover, textarea:hover{
-	border: 1px solid $accent-colour1;
-	background: #F5F5F5;
-}
-
-.text-input:focus, textarea:focus{
-	border: 1px solid $accent-colour1;
-	background: $accent-colour2;
-}
-
-/* Text Area Styling */
-textarea{
-	width: 100%;
-	padding: 0.5rem;
-	margin-top: 0.5rem;
-	font-family: 'Open Sans', sans-serif;
-	border: 1px solid #bbbbbb;
-	transition: 0.5s;
-}
-
-/* Change Size of Text Input Field */
-input[type = "text"], input[type="email"], textarea{
-  	width: 100%;
-}
-
 /* Button Styling */
 .action-btn-container {
 	margin-left: -1rem;
@@ -313,6 +237,32 @@ input[type = "text"], input[type="email"], textarea{
 	background: #FCFCFC;
 	color: #7B7B7B;
 }
+
+.arrow {
+	// color: #0c5449;
+	margin: 1em 0;
+  
+	&::after {
+		display: inline-block;
+		padding-left: 0.25rem;
+		content: "\2192"; // arrow right unicode
+		-webkit-transition: transform 0.3s ease-out;
+		-moz-transition: transform 0.3s ease-out;
+		-ms-transition: transform 0.3s ease-out;
+		-o-transition: transform 0.3s ease-out;
+		transition: transform 0.3s ease-out;
+	}
+  
+	&:hover {
+		&::after {
+			-webkit-transform: translateX(0.5rem);
+			-moz-transform: translateX(0.5rem);
+			-ms-transform: translateX(0.5rem);
+			-o-transform: translateX(0.5rem);
+			transform: translateX(0.5rem);
+		}
+	}
+  }
 
 /* Footer Styling */
 footer{
@@ -469,3 +419,91 @@ footer{
     	display: none;
   	}
 }
+
+
+
+
+
+
+
+
+
+// /* Style the Image Used to Trigger the Modal */
+// .lightbox-img {
+// 	cursor: zoom-in;
+// 	transition: 0.3s;
+// }
+  
+// /* The Modal (background) */
+// .modal {
+// 	display: none; /* Hidden by default */
+// 	position: fixed; /* Stay in place */
+// 	padding-top: 5%; 
+// 	left: 0;
+// 	top: 0;
+// 	width: 100%; /* Full width */
+// 	height: 100%; /* Full height */
+// 	overflow: auto; /* Enable scroll if needed */
+// 	background-color: $background-colour;
+// 	z-index: 3;
+// }
+  
+// /* Modal Content (Image) */
+// .modal-content {
+// 	margin: auto;
+// 	display: block;
+// 	width: 75%;
+// 	// max-width: 700px;
+// }
+  
+// /* Caption of Modal Image (Image Text) - Same Width as the Image */
+// #caption {
+// 	margin: auto;
+// 	display: block;
+// 	width: 80%;
+// 	max-width: 40rem;
+// 	text-align: center;
+// 	color: $text-colour;
+// 	// padding: 10px 0;
+// 	// height: 10rem;
+// }
+  
+// /* Add Animation - Zoom in the Modal */
+// .modal-content, #caption {
+// 	animation-name: zoom;
+// 	animation-duration: 0.6s;
+// }
+  
+// @keyframes zoom {
+// 	from {transform:scale(0)}
+// 	to {transform:scale(1)}
+// }
+  
+// /* The Close Button */
+// .close {
+// 	position: absolute;
+// 	top: 1%;
+// 	right: 4%;
+// 	color: $accent-colour1;
+// 	font-size: 3rem;
+// 	font-weight: bold;
+// 	transition: 0.3s;
+// }
+  
+// .close:hover, .close:focus {
+// 	color: $accent-colour1;
+// 	text-decoration: none;
+// 	cursor: pointer;
+// }
+  
+// /* 100% Image Width on Smaller Screens */
+// @media only screen and (max-width: 700px){
+// 	.modal-content {
+// 	  width: 100%;
+// 	}
+
+// 	.close {
+// 		top: 0.2rem;
+// 		font-size: 2rem;
+// 	}
+// }
