Added VanCity Cycling and PSOD projects

--- a/css/index.scss
+++ b/css/index.scss
@@ -127,7 +127,7 @@ $background-colour: #ffffff;
 .main-header h2{
   color: $accent-colour1;
   width: 60%;
-  font-weight: 600;
+  // font-weight: 600;
   font-size: 1.5rem;
   margin-top: -10rem;
   margin-left: 0.3rem;
