--- a/css/project.css
+++ b/css/project.css
@@ -17,16 +17,16 @@
 .heading-container {
   flex: 1;
   order: 1;
-  margin-right: 8%;
+  margin-right: 10%;
   text-align: right;
-  padding-left: 8%;
+  padding-left: 2%;
 }
 
 /* Process Description Styling */
 .process-description {
   flex: 3;
   order: 2;
-  padding-right: 8%;
+  padding-right: 15%;
 }
 
 .process-description img {
@@ -84,8 +84,35 @@ hr {
 
 /* Container For Next Project Button */
 .project-navigation {
-  margin: 5rem 9.5% 6rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 5rem 10% 6rem;
+}
+
+.project-navigation .next {
+  flex: 1;
   text-align: right;
+}
+
+.project-navigation .prev {
+  flex: 1;
+  text-align: left;
+}
+
+#scroll-top {
+  cursor: pointer;
+  position: fixed;
+  bottom: 1rem;
+  right: 4%;
+  padding: 0.7rem 1rem;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s linear;
+}
+
+#scroll-top:hover, #scroll-top:focus {
+  opacity: 1;
 }
 
 /* MEDIA QUERIES */
