--- a/css/seerem.css
+++ b/css/seerem.css
@@ -1,6 +1,6 @@
 /* Header Styling */
 .sub-header {
-  background: url(../img/seeremheader.png);
+  background: url(../img/seerem/seeremheader.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
