--- a/css/project.scss
+++ b/css/project.scss
@@ -20,16 +20,20 @@ $accent-colour2:  #DDC7C4;
 .heading-container{
 	flex: 1;
 	order: 1;
-	margin-right: 8%;
+	margin-right: 10%;
 	text-align: right;
-	padding-left: 8%;
+	padding-left: 2%;
+
+	// border: 1px solid;
 }
 
 /* Process Description Styling */
 .process-description{
 	flex: 3;
 	order: 2;
-	padding-right: 8%;
+	padding-right: 15%;
+
+	// border: 1px solid;
 }
 
 .process-description img{
@@ -86,9 +90,42 @@ hr{
 }
 
 /* Container For Next Project Button */
+// .project-navigation{
+// 	margin: 5rem 9.5% 6rem;
+// 	text-align: right;
+// }
+
 .project-navigation{
-	margin: 5rem 9.5% 6rem;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	margin: 5rem 10% 6rem;
+}
+
+.project-navigation .next{
+	flex: 1;
 	text-align: right;
+}
+
+.project-navigation .prev{
+	flex: 1;
+	text-align: left;
+}
+
+#scroll-top{
+	cursor: pointer;
+	position: fixed;
+	bottom: 1rem;
+	// right: 3rem;
+	right: 4%;
+	padding: 0.7rem 1rem;
+	visibility: hidden;
+	opacity: 0;
+  	transition: 0.3s linear;
+}
+
+#scroll-top:hover, #scroll-top:focus{
+	opacity: 1;
 }
 
 /* MEDIA QUERIES */
