--- a/css/index.css
+++ b/css/index.css
@@ -259,6 +259,11 @@ hr {
     width: 90%;
   }
 
+  .curves {
+    padding-top: 5rem;
+    width: 90vw;
+  }
+
   .project-display-container {
     flex-direction: column;
   }
@@ -312,7 +317,7 @@ hr {
 
   .anchor {
     padding-top: 0;
-    margin-top: 4rem;
+    margin-top: 0rem;
   }
 }
 /* Screen size of 480px - 768px */
@@ -336,6 +341,11 @@ hr {
     font-size: 1rem;
     margin-top: 5rem;
     width: 90%;
+  }
+
+  .curves {
+    padding-top: 5rem;
+    width: 90vw;
   }
 
   .project-display-container {
@@ -391,7 +401,7 @@ hr {
 
   .anchor {
     padding-top: 0;
-    margin-top: 4rem;
+    margin-top: 0rem;
   }
 }
 /* Screen size of 768px - 960px */
@@ -443,6 +453,6 @@ hr {
 
   .anchor {
     padding-top: 0;
-    margin-top: 4rem;
+    margin-top: 0rem;
   }
 }
