--- a/css/index.scss
+++ b/css/index.scss
@@ -16,10 +16,7 @@ $background-colour: #ffffff;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-
   background-color: $accent-colour3;
-  // background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1004%26quot%3b)' fill='none'%3e%3cpath d='M1462.07 262.71C1310.73 255 1137.34-7.09 921.57-11.69 705.8-16.29 719.11-33.75 651.32-33.77' stroke='rgba(251%2c 250%2c 250%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M1697.54 131.37C1583.11 138.82 1501.6 356.22 1297.27 355.37 1092.94 354.52 1033.19-3.2 897-33.34' stroke='rgba(251%2c 250%2c 250%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M1606.08 472.07C1492.02 471.86 1380.65 402.07 1155.23 402.07 929.8 402.07 959.82 487.07 704.37 472.07 448.93 457.07 422.64-24.74 253.52-82.22' stroke='rgba(251%2c 250%2c 250%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M1595.58 418.67C1491 417.47 1424.18 316.42 1194.11 301.07 964.04 285.72 921.83-13.99 792.64-35.2' stroke='rgba(251%2c 250%2c 250%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M1628.57 60.33C1447.41 64.93 1292.54 323.7 953.18 323.53 613.82 323.36 473.2-59.73 277.79-74.13' stroke='rgba(251%2c 250%2c 250%2c 1)' stroke-width='2'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1004'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
-
 }
 
 .curve-container{
@@ -29,13 +26,12 @@ $background-colour: #ffffff;
 }
 
 .curves {
-  // width: 90vw; 
   width: 70vw; 
   height: auto;
 }
 
 .curve-container > svg > g > path{
-  animation: animateCurves 90s cubic-bezier(.55,.5,.45,.5)     infinite;
+  animation: animateCurves 90s cubic-bezier(.55,.5,.45,.5) infinite;
   animation-direction: alternate;
 }
 
@@ -127,7 +123,6 @@ $background-colour: #ffffff;
 .main-header h2{
   color: $accent-colour1;
   width: 60%;
-  // font-weight: 600;
   font-size: 1.5rem;
   margin-top: -10rem;
   margin-left: 0.3rem;
@@ -143,8 +138,6 @@ $background-colour: #ffffff;
 /* Header Links Container */
 .side-nav{
   flex: 1;
-
-  
   z-index: 1;
 }
 
@@ -212,10 +205,8 @@ hr{
 /* Project Display Styling */
 .project-display{
   display: flex;
-  // flex-direction: row;
   flex-wrap: wrap;
   margin-bottom: 6rem;
-
   flex-direction: column; 
 }
 
@@ -223,25 +214,10 @@ hr{
 .project-image{
   flex: 2;
   background: $accent-colour3;
-  // padding: 3rem 8rem 3rem 4rem;
-
   margin-right: 10%;
   padding: 2rem 4rem 3rem;
   order: 1;
 }
-
-// .project-image img{
-//   width: 100%;
-// }
-
-// .project-image{
-//   // order: 2;
-//   background: $accent-colour3;
-//   // padding: 3rem 4rem 3rem 8rem;
-
-//   order: 1;
-//   padding: 2rem 4rem 3rem;
-// }
 
 .project-image img{
   width: 100%;
@@ -260,12 +236,6 @@ hr{
   order: 2;
 }
 
-// .project-description-container.left{
-//   // order: 1;
-
-//   order: 2;
-// }
-
 .project-description{
   background: $accent-colour2;
   // padding: 3rem 4rem;
@@ -275,20 +245,6 @@ hr{
   margin-top: -3rem;
   margin-left: 0;
 }
-
-// .project-description.right{
-//   // margin-left: -4rem;
-
-//   margin-top: -3rem;
-//   margin-left: 0;
-// }
-
-// .project-description.left{
-//   // margin-right: -4rem;
-
-//   margin-top: -3rem;
-//   margin-right: 0;
-// }
 
 /* Project Display Text */
 .project-description h3{
@@ -324,6 +280,11 @@ hr{
     font-size: 0.8rem;
     margin-top: 3.5rem;
     width: 90%;
+  }
+
+  .curves { 
+    padding-top: 5rem;
+    width: 90vw; 
   }
 
   .project-display-container{
@@ -371,25 +332,6 @@ hr{
     font-size: 0.6rem;
   }
 
-  // .project-image.right{
-  //   order: 1;
-  //   padding: 2rem 1.5rem;
-  // }
-
-  // .project-description-container.left{
-  //   order: 2;
-  // }
-
-  // .project-description.right{
-  //   margin-top: -2rem;
-  //   margin-left: 0;
-  // }
-
-  // .project-description.left{
-  //   margin-top: -2rem;
-  //   margin-right: 0;
-  // }
-
   .main-nav{
     visibility: visible;
     opacity: 1;
@@ -401,7 +343,7 @@ hr{
 
   .anchor{
     padding-top: 0;
-    margin-top: 4rem;
+    margin-top: 0rem;
   }
 }
 
@@ -426,6 +368,11 @@ hr{
     font-size: 1rem;
     margin-top: 5rem;
     width: 90%;
+  }
+
+  .curves { 
+    padding-top: 5rem;
+    width: 90vw; 
   }
 
   .project-display-container{
@@ -473,25 +420,6 @@ hr{
     font-size: 0.8rem;
   }
 
-  // .project-image.right{
-  //   order: 1;
-  //   padding: 2rem 4rem 3rem;
-  // }
-
-  // .project-description-container.left{
-  //   order: 2;
-  // }
-
-  // .project-description.right{
-  //   margin-top: -3rem;
-  //   margin-left: 0;
-  // }
-
-  // .project-description.left{
-  //   margin-top: -3rem;
-  //   margin-right: 0;
-  // }
-
   .main-nav{
     visibility: visible;
     opacity: 1;
@@ -503,7 +431,7 @@ hr{
 
   .anchor{
     padding-top: 0;
-    margin-top: 4rem;
+    margin-top: 0rem;
   }
 }
 
@@ -545,10 +473,6 @@ hr{
     margin-bottom: 4rem; 
   }
 
-  // .project-description h3{
-  //   font-size: 1.2rem;
-  // }
-
   .side-nav ul{
     margin-top: -0.5rem;
   }
@@ -560,8 +484,6 @@ hr{
 
   .anchor{
     padding-top: 0;
-    margin-top: 4rem;
+    margin-top: 0rem;
   }
 }
-  
-  
