--- a/css/project.css
+++ b/css/project.css
@@ -22,6 +22,11 @@
   padding-left: 2%;
 }
 
+.heading-container h3 {
+  position: sticky;
+  top: 10rem;
+}
+
 /* Process Description Styling */
 .process-description {
   flex: 3;
