--- a/css/main.scss
+++ b/css/main.scss
@@ -331,6 +331,10 @@ footer{
 		font-size: 0.75rem;
 	}
 
+	p{
+		line-height: 1.4rem;
+	}
+
 	.sub-header{
 		margin-bottom: 0;
 		padding: 8rem 10% 3rem;
@@ -444,91 +448,3 @@ footer{
     	display: none;
   	}
 }
-
-
-
-
-
-
-
-
-
-// /* Style the Image Used to Trigger the Modal */
-// .lightbox-img {
-// 	cursor: zoom-in;
-// 	transition: 0.3s;
-// }
-  
-// /* The Modal (background) */
-// .modal {
-// 	display: none; /* Hidden by default */
-// 	position: fixed; /* Stay in place */
-// 	padding-top: 5%; 
-// 	left: 0;
-// 	top: 0;
-// 	width: 100%; /* Full width */
-// 	height: 100%; /* Full height */
-// 	overflow: auto; /* Enable scroll if needed */
-// 	background-color: $background-colour;
-// 	z-index: 3;
-// }
-  
-// /* Modal Content (Image) */
-// .modal-content {
-// 	margin: auto;
-// 	display: block;
-// 	width: 75%;
-// 	// max-width: 700px;
-// }
-  
-// /* Caption of Modal Image (Image Text) - Same Width as the Image */
-// #caption {
-// 	margin: auto;
-// 	display: block;
-// 	width: 80%;
-// 	max-width: 40rem;
-// 	text-align: center;
-// 	color: $text-colour;
-// 	// padding: 10px 0;
-// 	// height: 10rem;
-// }
-  
-// /* Add Animation - Zoom in the Modal */
-// .modal-content, #caption {
-// 	animation-name: zoom;
-// 	animation-duration: 0.6s;
-// }
-  
-// @keyframes zoom {
-// 	from {transform:scale(0)}
-// 	to {transform:scale(1)}
-// }
-  
-// /* The Close Button */
-// .close {
-// 	position: absolute;
-// 	top: 1%;
-// 	right: 4%;
-// 	color: $accent-colour1;
-// 	font-size: 3rem;
-// 	font-weight: bold;
-// 	transition: 0.3s;
-// }
-  
-// .close:hover, .close:focus {
-// 	color: $accent-colour1;
-// 	text-decoration: none;
-// 	cursor: pointer;
-// }
-  
-// /* 100% Image Width on Smaller Screens */
-// @media only screen and (max-width: 700px){
-// 	.modal-content {
-// 	  width: 100%;
-// 	}
-
-// 	.close {
-// 		top: 0.2rem;
-// 		font-size: 2rem;
-// 	}
-// }
