--- a/css/project.css
+++ b/css/project.css
@@ -39,6 +39,29 @@
   margin-top: 0.5rem;
 }
 
+.process-description figure {
+  margin: 0;
+}
+
+.process-description figure + figure {
+  margin-top: 2rem;
+}
+
+.process-description figcaption {
+  margin-top: 0.5rem;
+  font-style: italic;
+}
+
+.embedded-video {
+  padding: 56.25% 0 0 0;
+  position: relative;
+}
+
+.embedded-video p {
+  margin-top: 3rem;
+  font-style: italic;
+}
+
 /* Image Styling */
 .image-container {
   flex: 1;
@@ -147,6 +170,14 @@ hr {
 
   .page-description {
     padding-right: 0;
+  }
+
+  .process-description figure + figure {
+    margin-top: 1rem;
+  }
+
+  .embedded-video p {
+    margin-top: 2rem;
   }
 
   .project-navigation {
